--- a/Workflow/Workflow.Rmd
+++ b/Workflow/Workflow.Rmd
@@ -16,7 +16,7 @@ author:
   email: INSERT.EMAIL
 abstract: Abstracts should be up to 300 words and provide a succinct summary of the article. Although the abstract should explain why the article might be interesting, care should be taken not to inappropriately over-emphasise the importance of the work described in the article. Citations should not be used in the abstract, and the use of abbreviations should be minimized.
 keywords: Please list up to eight keywords to help readers interested in your article find it more easily.
-bibliography: sample.bib
+bibliography: BASiCSworkflow.bib
 output: BiocWorkflowTools::f1000_article
 #output:
 # BiocStyle::html_document:
@@ -41,36 +41,98 @@ output: BiocWorkflowTools::f1000_article
 
 # Introduction
 
-The introduction provides context as to why the software tool was developed and what need it addresses.  It is good scholarly practice to mention previously developed tools that address similar needs, and why the current tool is needed.
+Single-cell RNA-sequencing (scRNA-seq) is the leading technology to study transcriptional heterogeneity in cellular subpopulations that remains undetected in bulk experiments [@Stegle2015]. Its applications range from studying cell types in immunity [@Lonnberg2017] and development [@Ibarra-Soria2018a] to dissecting the mechanism for cell-to-cell variability in expression [@Goolam2016] or understanding differentiation processes [@Proserpio2016]. Within a population of cells, transcript detection differences can be regarded as a mixture of possible causes. Extrinsic biological noise in form of differences in dynamic states (cell size, cell cycle, metabolism, intra- and inter-cellular signalling) and intrinsic noise that effects single promoters (mutations and epigenetic tags) alter gene expression within the cell [@Eberwine2015] while mRNA capture inefficiencies distort the detected transcript counts (technical noise) [@Brennecke2013].
+
+To account for high amounts of technical noise that affects scRNA-seq data, external RNA spike-in molecules (ERCCs) [@Rna2005] can be added to the experiment before sequencing. Fitting the variance-mean dependency of the ERCCs allows the statistical detection of genes with higher dispersion in expression than the technical background [@Brennecke2013]. This idea has been expanded to estimate cell specific normalisation factors in parallel within the BASiCS model. Total variability can be decomposed into a technical and biological part by incorporating ERCC reads [@Vallejos2015]. Since the era of bulk RNA sequencing, methods for differential expression testing of transcript counts across two conditions have been developed [@Anders2010;@Robinson2009]. Due to zero inflation in scRNA-seq data, approaches different from bulk RNA-seq analysis were developed for differential expression testing in scRNA-seq data [@Katayama2013;@Kharchenko2014;@Delmans2016]. In contrast to bulk samples, scRNA-seq allows the characterization of gene expression variability across a population of cells. To compare changes in transcriptional variability, the BASiCS package has been expanded to include differential mean expression and differential variability testing. In this setting, BASiCS uses the over-dispersion after correcting for technical noise as proxy for biolgocial variability [@Vallejos2016a]. Due to a strong confounding between mean expression and over-dispersion, BASiCS has been extended to model this relationship an capture residual over-dispersion estimates that show no correlation to mean expression. Therefore, it is possible to test changes in mean expression in parallel to changes in variability [@Eling2017]. 
+
+Here we present a computational workflow for differential expression and differential variability testing of scRNA-seq data using the previously published BASiCS package [@Vallejos2015;@Vallejos2016a;@Eling2017] implemented in the statistical computing language R. The analysis starts with a raw transcript counts matrix after removal of low-quality cells. A full quality control process is explained elsewhere [@McCarthy2017]. We will first focus on gene filtering, generating a BASiCS Data object, running and testing Markov-Chain Monte Carlo simulations. Additionally, we will use two examples (Cel-Seq [@Grun2014] and droplet-based scRNAseq data [@Ibarra-Soria2018a]) to exemplify statistical detection of highly variable, differentially expressed and differentially variable genes in different conditions. 
 
 # Methods
-## Implementation
-For software tool papers, this section should address how the tool works and any relevant technical details required for implementation of the tool by other developers.
+
+## The BASiCS model
+The BASiCS package features a hierarchical Bayesian model in which the transcript count of gene $i$ of cell $j$ is represented as a random variable $X_{ij}$. For all technical genes, counts can be modelled as Poisson distributed with a random effect capturing unexplained technical noise:
+
+$$
+\begin{aligned}
+X_{ij}&|\mu_i,\nu_j\sim{}Poisson(\nu_j\mu_i)\\
+\nu_j&|s_j,\theta\sim{}Gamma(1/\theta,1/(s_j\theta))
+\end{aligned}
+$$
+
+where $\mu_i$ explains the gene's mean expression, $\nu_j$ the technical effect dominated by the mRNA capture efficiency $s_j$ and the unexplained technical noise parameter $\theta$. 
+
+This technical influence effects all biological genes in the same manner. In addition to technical variations, cell-to-cell differences of biological gene expression can be cause by biological processes as explained above. To model an additional random effect that captures biological cell-to-cell variability, the random variable $X_{ij}$ is modelled as: 
+
+$$
+\begin{aligned}
+X_{ij}&|\mu_i,\phi_j,\nu_j,\rho_{ij}\sim{}Poisson(\phi_j\nu_j\mu_i\rho_{ij})\\
+\rho_{ij}&|\delta_i\sim{}Gamma(1/\delta_i,1/\delta_i)
+\end{aligned}
+$$
+
+where $\phi_j$ is the cell-specifc size factor and $\rho_{ij}$ the biological random effect incoroporating the over-dispersion hyper-parameter $\delta_i$.
+
+In the further analysis, $\mu_i$ represents the mean expression and $\delta_i$ the biological over-dispersion of each gene.
+
+### Testing for changes in mean expression and over-dispersion
+
+Due to a strong confounding that is typically observed between mean and over-dispersion for scRNA-seq datasets, 
+
+### Correcting the mean-variability confounding effect
+
 
 ## Operation
 This part of the methods should include the minimal system requirements needed to run the software and an overview of the workflow for the tool for users of the tool.
 
 
-# Results <!-- Optional - only if novel data or analyses are included -->
-This section is only required if the paper includes novel data or analyses, and should be written as a traditional results section.
+# Analysis of serum grown mESCs (single group example)
 
-# Use Cases <!-- Optional - only if NO new datasets are included -->
-This section is required if the paper does not include novel data or analyses. 
-Examples of input and output files should be provided with some explanatory context.  Any novel or complex variable parameters should also be explained in sufficient detail to allow users to understand and use the tool's functionality.
+Give a short description of the data
 
-# Discussion <!-- Optional - only if novel data or analyses are included -->
-This section is only required if the paper includes novel data or analyses, and should be written in the same style as a traditional discussion section.
-Please include a brief discussion of allowances made (if any) for controlling bias or unwanted sources of variability, and the limitations of any novel datasets.
+## Obtaining the data
+
+Use direct download link
+
+## Filtering the data
+
+## Caluclating the molecule count for ERCC spike ins
+
+Use one of the condition in Grun
+
+## Creating the BASiCS Data object
+
+## Running the MCMC
+
+## Downstream analysis
+
+### Lowly-highly variable genes
+
+# Differential testing using mESCs in two conditions (two group example)
+
+## Obtaining the data
+
+Shorter description as above
+
+## Filtering the data
+
+## Creating the BASiCS Data objects
+
+## Running the MCMC
+
+## Downstream analysis
+
+### Differential mean expression
+
+### Differential over-dispersion
+
+### Differential residual over-dispersion
+
+# Differential testing using differentiating cells (two group, droplet-based example)
 
 
-# Conclusions <!-- Optional - only if novel data or analyses are included -->
-This section is only required if the paper includes novel data or analyses, and should be written as a traditional conclusion.
-
-# Summary <!-- Optional - only if NO new datasets are included -->
+# Summary 
 This section is required if the paper does not include novel data or analyses.  It allows authors to briefly summarize the key points from the article.
 
-# Data availability <!-- Optional - only if novel data or analyses are included -->
-Please add details of where any datasets that are mentioned in the paper, and that have not have not previously been formally published, can be found.  If previously published datasets are mentioned, these should be cited in the references, as per usual scholarly conventions.
 
 # Software availability
 This section will be generated by the Editorial Office before publication. Authors are asked to provide some initial information to assist the Editorial Office, as detailed below.
@@ -95,95 +157,3 @@ Please state who funded the work discussed in this article, whether it is your e
 This section should acknowledge anyone who contributed to the research or the article but who does not qualify as an author based on the criteria provided earlier (e.g. someone or an organization that provided writing assistance). Please state how they contributed; authors should obtain permission to acknowledge from all those mentioned in the Acknowledgments section.
 
 Please do not list grant funding in this section.
-
-# USING R MARKDOWN
-Some examples of commonly used markdown syntax are listed below, to help you get started.
-
-## Cross-references
-For portability between different output formats, use the syntax introduced by *bookdown*, such as `(\#label)` for labels and `\@ref(label)` for cross-references. The following sections provide examples of referencing tables, figures, and equations.
-
-## Citations
-
-You can include references in a standard Bibtex file.  The name of this file is given in the header of the markdown document (in our case it is *sample.bib*).  References to entries in the Bibtex file are made using square brackets and use an @ plus the key for the entry you are referencing [@Smith:2012qr].  You can combine multiple entries by separating them with a semi-colon [@Smith:2012qr; @Smith:2013jd].
-The default bibliography style uses numerical citations.  For superscript or author-year citations set the header metadata field `natbiboptions` to either `super` or `round`, respectively.
-
-## Code chunks
-You can embed an R code chunk like this:
-```{r firstCodeChunk}
-x <- 1:10
-x
-```
-
-If you specify a figure caption to a code chunk using the chunk option `fig.cap`, the plot will be automatically labeled and numbered. The figure label is generated from the label of the code chunk by prefixing it with `fig:`, e.g., see Figure \@ref(fig:plot).
-
-```{r plot, out.width='60%', fig.cap='A caption to our sample plot.'}
-plot(x)
-```
-
-## Tables
-
-Markdown syntax tends to lack some of the more sophisticated formatting features available in LaTeX, so you may need to edit the tables later to get the desired format.
-
-| First name  | Last Name | Grade |
-| ----------- | --------- | ----- |
-| John        | Doe       |   7.5 |
-| Richard     | Miles     |     2 |
-
-Table: Caption to table.
-
-Just like figures, tables with captions will also be numbered and can be referenced. Captions are entered as a paragraph beginning with the string "Table:" (or just ":"), which may appear either before or after the table. A label for the table should appear in the beginning of the caption in the form of `(\#tab:label)`, e.g., see Table \@ref(tab:table).
-
-: (\#tab:table) A table with text justification.
-
-| First name  | Last Name | Grade |
-| ----------- | :-------: | ----: |
-| John        | Doe       |   7.5 |
-| Richard     | Miles     |     2 |
-
-## Figures
-
-You can include static figures (i.e. no generated by code) using the `include_graphics()` function from the **knitr** package, in a standard code chunk.
-
-```{r frog-picture, out.width='50%', fig.cap = 'Your figure legend goes here; it should be succinct, while still explaining all symbols and abbreviations.'}
-knitr::include_graphics('frog.jpg')
-```
-
-You can again use the `fig.cap` option to provide the figure caption, and reference the image based on the code chunk label.  You can also use options such as `fig.align` and `fig.width` to adjust the position and size of the image within the final document, e.g. Figure \@ref(fig:frog-picture) is a frog.
-
-Alternatively, you can use the standard markdown syntax like so:
-
-![This is a smaller version of the same picture, inserted using the standard markdown syntax](frog.jpg){width=25%}
-
-Please give figures appropriate filenames, e.g.: figure1.pdf, figure2.png.
-
-Figure legends should briefly describe the key messages of the figure such that the figure can stand alone from the main text. However, all figures should also be discussed in the article text. Each legend should have a concise title of no more than 15 words. The legend itself should be succinct, while still explaining all symbols and abbreviations. Avoid lengthy descriptions of methods.
-
-For any figures reproduced from another publication (as long as appropriate permission has been obtained from the copyright holder —see under the heading 'Submission'), please include a line in the legend to state that: 'This figure has been reproduced with kind permission from [include original publication citation]'.
-
-## Mathematics
-
-You can use LaTeX syntax to typeset mathematical expressions.  Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
-$$S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
-      = \frac{1}{n}\sum_{i}^{n} X_i$$
-denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
-
-To number and refer to equations, put them in the equation environments and assign labels to them, as for Equation \@ref(eq:binom).
-
-\begin{equation}
-  f\left(k\right) = \binom{n}{k} p^k\left(1-p\right)^{n-k}
-  (\#eq:binom)
-\end{equation}
-
-## Lists
-
-You can make ordered lists
-
-1. Like this,
-2. and like this.
-
-or bullet points
-
-* Like this,
-* and like this.
-    + Use indentation
-        - for sub-items
