Intro to droplet-based scRNA-Seq

--- a/Workflow/Workflow.Rmd
+++ b/Workflow/Workflow.Rmd
@@ -45,7 +45,7 @@ Single-cell RNA-sequencing (scRNA-seq) is the leading technology to study transc
 
 To account for high amounts of technical noise that affects scRNA-seq data, external RNA spike-in molecules (ERCCs) [@Rna2005] can be added to the experiment before sequencing. Fitting the variance-mean dependency of the ERCCs allows the statistical detection of genes with higher dispersion in expression than the technical background [@Brennecke2013]. This idea has been expanded to estimate cell specific normalisation factors in parallel within the BASiCS model. Total variability can be decomposed into a technical and biological part by incorporating ERCC reads [@Vallejos2015]. Since the era of bulk RNA sequencing, methods for differential expression testing of transcript counts across two conditions have been developed [@Anders2010;@Robinson2009]. Due to zero inflation in scRNA-seq data, approaches different from bulk RNA-seq analysis were developed for differential expression testing in scRNA-seq data [@Katayama2013;@Kharchenko2014;@Delmans2016]. In contrast to bulk samples, scRNA-seq allows the characterization of gene expression variability across a population of cells. To compare changes in transcriptional variability, the BASiCS package has been expanded to include differential mean expression and differential variability testing. In this setting, BASiCS uses the over-dispersion after correcting for technical noise as proxy for biolgocial variability [@Vallejos2016a]. Due to a strong confounding between mean expression and over-dispersion, BASiCS has been extended to model this relationship an capture residual over-dispersion estimates that show no correlation to mean expression. Therefore, it is possible to test changes in mean expression in parallel to changes in variability [@Eling2017]. 
 
-Here we present a computational workflow for differential expression and differential variability testing of scRNA-seq data using the previously published BASiCS package [@Vallejos2015;@Vallejos2016a;@Eling2017] implemented in the statistical computing language R. The analysis starts with a raw transcript counts matrix after removal of low-quality cells. A full quality control process is explained elsewhere [@McCarthy2017]. We will first focus on gene filtering, generating a BASiCS Data object, running and testing Markov-Chain Monte Carlo simulations. Additionally, we will use two examples (Cel-Seq [@Grun2014] and droplet-based scRNAseq data [@Ibarra-Soria2018a]) to exemplify statistical detection of highly variable, differentially expressed and differentially variable genes in different conditions. 
+Here we present a computational workflow for differential expression and differential variability testing of scRNA-seq data using the previously published BASiCS package [@Vallejos2015;@Vallejos2016a;@Eling2017] implemented in the statistical computing language R. The analysis starts with a raw transcript counts matrix after removal of low-quality cells. A full quality control process is explained elsewhere [@McCarthy2017]. We will first focus on gene filtering, generating a BASiCS Data object, running and testing Markov-Chain Monte Carlo simulations. Additionally, we will use two examples (Cel-Seq [@Grun2014] and droplet-based scRNAseq data [@Ibarra-Soria2018]) to exemplify statistical detection of highly variable, differentially expressed and differentially variable genes in different conditions. 
 
 # Methods
 
@@ -128,6 +128,8 @@ Shorter description as above
 ### Differential residual over-dispersion
 
 # Differential testing using differentiating cells (two group, droplet-based example)
+
+With the development of droplet-based scRNA-Seq [@Klein2015, @Makosco2015] lead to a strong increase in the number of cells that can be profiled per experiment. With this, large-scale scRNA-Seq datasets have been generated to study development across multiple time-points and capturing musltiple tissues [@Ibarra-Soria2018, @Kernfeld2018]. Here we dscribe the computational analysis of changes in mean expression and transcriptional variability when data is sparse and technical spike-in genes are missing. For this, we compare cells of the presomitic mesoderm and somitic mesoderm using droplet-based scRNA-Seq data [@Ibarra-Soria2018]. 
 
 
 # Summary 
