Fixed typo and one sentence per line, thanks Aaron

--- a/Workflow/Workflow.Rmd
+++ b/Workflow/Workflow.Rmd
@@ -134,13 +134,16 @@ Shorter description as above
 
 # Differential testing using differentiating cells (two group, droplet-based example)
 
-With the development of droplet-based scRNA-Seq [@Klein2015, @Makosco2015] lead to a strong increase in the number of cells that can be profiled per experiment. With this, large-scale scRNA-Seq datasets have been generated to study development across multiple time-points and capturing musltiple tissues [@Ibarra-Soria2018, @Kernfeld2018]. Here we dscribe the computational analysis of changes in mean expression and transcriptional variability when data is sparse and technical spike-in genes are missing. For this, we compare cells of the presomitic mesoderm and somitic mesoderm using droplet-based scRNA-Seq data [@Ibarra-Soria2018].
+With the development of droplet-based scRNA-Seq [@Klein2015, @Makosco2015] lead to a strong increase in the number of cells that can be profiled per experiment. 
+With this, large-scale scRNA-Seq datasets have been generated to study development across multiple time-points and capturing musltiple tissues [@Ibarra-Soria2018, @Kernfeld2018]. 
+Here we describe the computational analysis of changes in mean expression and transcriptional variability when data is sparse and technical spike-in genes are missing. 
+For this, we compare cells of the presomitic mesoderm and somitic mesoderm using droplet-based scRNA-Seq data [@Ibarra-Soria2018].
 
 ## Obtaining the data
 
 The full dataset is stored under the accession number E-MTAB-6153 on ArrayExpress and can be obtained via:
 
-```{r load-droplet-data, eval = FALSE, echo = FALSE}
+```{r load-droplet-data, eval = FALSE}
 if(!file.exists("rawCounts.zip")){
   download.file("https://www.ebi.ac.uk/arrayexpress/files/E-MTAB-6153/E-MTAB-6153.processed.2.zip", 
                 destfile = "rawCounts.zip")
